--- a/wireshark/plugins/btbb/CMakeLists.txt
+++ b/wireshark/plugins/btbb/CMakeLists.txt
@@ -28,7 +28,7 @@ set(CMAKE_BACKWARDS_COMPATIBILITY 2.6)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 IF ( NOT CMAKE_INSTALL_LIBDIR )
-  set(CMAKE_INSTALL_LIBDIR ~/.wireshark/plugins/)
+  set(CMAKE_INSTALL_LIBDIR ~/.wireshark/plugins)
 ENDIF ( NOT CMAKE_INSTALL_LIBDIR )
 MESSAGE (STATUS "Plugin will be installed in: ${CMAKE_INSTALL_LIBDIR}")
 
@@ -84,6 +84,6 @@ set_target_properties(btbb PROPERTIES LINK_FLAGS "${WS_LINK_FLAGS}")
 target_link_libraries(btbb wireshark)
 
 install(TARGETS btbb
-	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} NAMELINK_SKIP
+	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/ NAMELINK_SKIP
 )
 
