--- a/wireshark/plugins/btle/Makefile.common
+++ b/wireshark/plugins/btle/Makefile.common
@@ -24,12 +24,11 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 # the name of the plugin
-PLUGIN_NAME = btbb
+PLUGIN_NAME = btle
 
 # the dissector sources (without any helpers)
 DISSECTOR_SRC = \
-	packet-btbb.c \
-	packet-btlmp.c
+	packet-btle.c
 
 # corresponding headers
 DISSECTOR_INCLUDES =
