gitignore: hide noise from Wireshark plugins

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 *.o
 *.so.*
+*.so
 *.pyc
+
+# wireshark plugins
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+install_manifest.txt
+plugin.c
+wireshark/plugins/btatt/Makefile
+wireshark/plugins/btle/Makefile
+wireshark/plugins/btsm/Makefile
