Update to include storing captures in pcap and pcapng format for LINKTYPE_BLUETOOTH_BREDR_BB and LINKTYPE_BLUETOOTH_LE_LL_WITH_PHDR.
Includes:
* Add support for BTLE access address validity determination.
* Refactor BTLE support with accessors and opaque internals similar
  to BR support.

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -22,9 +22,11 @@
 set(c_sources ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_packet.c
               ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_piconet.c
               ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_le_packet.c
+              ${CMAKE_CURRENT_SOURCE_DIR}/pcap.c
+              ${CMAKE_CURRENT_SOURCE_DIR}/pcapng.c
+              ${CMAKE_CURRENT_SOURCE_DIR}/pcapng-bt.c
 			  CACHE INTERNAL "List of C sources")
-set(c_headers ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_le_packet.h
-              ${CMAKE_CURRENT_SOURCE_DIR}/btbb.h
+set(c_headers ${CMAKE_CURRENT_SOURCE_DIR}/btbb.h
 			  CACHE INTERNAL "List of C headers")
 
 # For cygwin just force UNIX OFF and WIN32 ON
