--- a/debian/control
+++ b/debian/control
@@ -3,19 +3,19 @@ Section: net
 Priority: optional
 Maintainer: Dominic Spill <dominicgs@gmail.com>
 Standards-Version: 0.3
-Build-Depends: libusb-1.0-0-dev, libpcap0.8-dev, cmake
+Build-Depends: libpcap0.8-dev, cmake
 Vcs-Git: https://github.com/greatscottgadgets/libbtbb.git
 Vcs-Browser: https://github.com/greatscottgadgets/libbtbb/
 Homepage: https://github.com/greatscottgadgets/libbtbb/
 
 Package: libbtbb
 Architecture: any
-Depends: libusb-1.0-0, libpcap0.8
+Depends: libpcap0.8
 Description: Bluetooth baseband library
 
 Package: libbtbb-dev
 Architecture: any
 Section: devel
-Depends: libusb-1.0-0-dev, libpcap0.8-dev
+Depends: libpcap0.8-dev
 Description: Bluetooth baseband library - development files
 
