--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ sudo: false
 addons:
   apt:
     packages:
-    - libpcap-dev 
+      - libpcap-dev 
+  artifacts: true
 
 before_script:
   - mkdir build
