Set aggressive flags for travis ci builds  - Perhaps -Werror is too aggressive, but we'll ignore it if we don't

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ addons:
 before_script:
   - mkdir build
   - cd build
-  - cmake ..
+  - CFLAGS="-g -Wall -Wextra -Werror" cmake ..
 
 script: make
