More cmake experimentation

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -27,8 +27,9 @@ if ( "${RELEASE}" STREQUAL "" )
 	include(GetGitRevisionDescription)
 	get_git_head_revision(GIT_REFSPEC RELEASE)
 
-	set(DIRTY $(shell git status -s --untracked-files=no))
-	if ( NOT "${DIRTY}" STREQUAL "" )
+	execute_process(COMMAND git status -s --untracked-files=no OUTPUT_VARIABLE DIRTY)
+	message(STATUS "|${DIRTY}|")
+	if ( NOT "${DIRTY}" STREQUAL "\n" )
 		set(DIRTY_FLAG "*")
 	endif()
 endif()
