--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -46,33 +46,25 @@ set(c_sources ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_packet.c
 set(c_headers ${CMAKE_CURRENT_SOURCE_DIR}/btbb.h
 			  CACHE INTERNAL "List of C headers")
 
-# Defaults: BUILD_SHARED=ON, BUILD_STATIC=OFF
-if( NOT DEFINED BUILD_SHARED )
-	set(BUILD_SHARED ON)
-endif( NOT DEFINED BUILD_SHARED )
-if( NOT DEFINED BUILD_STATIC )
-	set(BUILD_STATIC OFF)
-endif( NOT DEFINED BUILD_STATIC )
-
-if( NOT ${BUILD_SHARED} AND NOT ${BUILD_STATIC} )
+if( NOT ${BUILD_SHARED_LIB} AND NOT ${BUILD_STATIC} )
 	message( FATAL_ERROR "Not building static or shared library - at least one must be built")
-endif( NOT ${BUILD_SHARED} AND NOT ${BUILD_STATIC} )
+endif( NOT ${BUILD_SHARED_LIB} AND NOT ${BUILD_STATIC} )
 
-if( ${BUILD_SHARED} )
+if( ${BUILD_SHARED_LIB} )
 	# Shared library
 	message(STATUS "Building shared library")
 	add_library(btbb SHARED ${c_sources})
 	set_target_properties(btbb PROPERTIES VERSION ${MAJOR_VERSION}.${MINOR_VERSION} SOVERSION 0)
 	set_target_properties(btbb PROPERTIES CLEAN_DIRECT_OUTPUT 1)
-endif( ${BUILD_SHARED} )
+endif( ${BUILD_SHARED_LIB} )
 
-if( ${BUILD_STATIC} )
+if( ${BUILD_STATIC_LIB} )
 	# Static library
 	message(STATUS "Building static library")
 	add_library(btbb-static STATIC ${c_sources})
 	set_target_properties(btbb-static PROPERTIES OUTPUT_NAME "btbb")
 	set_target_properties(btbb-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
-endif( ${BUILD_STATIC} )
+endif( ${BUILD_STATIC_LIB} )
 
 # PCAP Support
 if( (NOT DEFINED USE_PCAP) OR USE_PCAP )
@@ -85,29 +77,29 @@ if( (NOT DEFINED USE_PCAP) OR USE_PCAP )
 
 	if( ${PCAP_FOUND} )
 		include_directories(${PCAP_INCLUDE_DIRS})
-		if( ${BUILD_SHARED} )
+		if( ${BUILD_SHARED_LIB} )
 			target_link_libraries(btbb ${PCAP_LIBRARIES})
-		endif( ${BUILD_SHARED} )
-		if( ${BUILD_STATIC} )
+		endif( ${BUILD_SHARED_LIB} )
+		if( ${BUILD_STATIC_LIB} )
 			target_link_libraries(btbb-static ${PCAP_LIBRARIES})
-		endif( ${BUILD_STATIC} )
+		endif( ${BUILD_STATIC_LIB} )
 		add_definitions( -DENABLE_PCAP )
 	endif( ${PCAP_FOUND} )
 endif( (NOT DEFINED USE_PCAP) OR USE_PCAP )
 
-if( ${BUILD_SHARED} )
+if( ${BUILD_SHARED_LIB} )
    install(TARGETS btbb
            LIBRARY DESTINATION lib${LIB_SUFFIX}
            COMPONENT sharedlibs
            )
-endif( ${BUILD_SHARED} )
+endif( ${BUILD_SHARED_LIB} )
 
-if( ${BUILD_STATIC} )
+if( ${BUILD_STATIC_LIB} )
    install(TARGETS btbb-static
            DESTINATION lib${LIB_SUFFIX}
            COMPONENT staticlibs
            )
-endif( ${BUILD_STATIC} )
+endif( ${BUILD_STATIC_LIB} )
 
 install(FILES ${c_headers}
         DESTINATION include
