--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -51,34 +51,28 @@ if( NOT ${BUILD_SHARED_LIB} AND NOT ${BUILD_STATIC} )
 	message( FATAL_ERROR "Not building static or shared library - at least one must be built")
 endif( NOT ${BUILD_SHARED_LIB} AND NOT ${BUILD_STATIC} )
 
+set(CMAKE_MACOSX_RPATH 1)
+
 if( ${BUILD_SHARED_LIB} )
-	# Shared library
-	message(STATUS "Building shared library")
-	add_library(btbb SHARED ${c_sources})
-	set_target_properties(btbb PROPERTIES VERSION ${MAJOR_VERSION}.${MINOR_VERSION} SOVERSION 0)
-	set_target_properties(btbb PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+    # Shared library
+    message(STATUS "Building shared library")
+    add_library(btbb SHARED ${c_sources})
+    set_target_properties(btbb PROPERTIES VERSION ${MAJOR_VERSION}.${MINOR_VERSION} SOVERSION 0)
+    set_target_properties(btbb PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+    install(TARGETS btbb
+            LIBRARY DESTINATION lib${LIB_SUFFIX}
+            COMPONENT sharedlibs)
 endif( ${BUILD_SHARED_LIB} )
 
 if( ${BUILD_STATIC_LIB} )
-	# Static library
-	message(STATUS "Building static library")
-	add_library(btbb-static STATIC ${c_sources})
-	set_target_properties(btbb-static PROPERTIES OUTPUT_NAME "btbb")
-	set_target_properties(btbb-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
-endif( ${BUILD_STATIC_LIB} )
-
-if( ${BUILD_SHARED_LIB} )
-   install(TARGETS btbb
-           LIBRARY DESTINATION lib${LIB_SUFFIX}
-           COMPONENT sharedlibs
-           )
-endif( ${BUILD_SHARED_LIB} )
-
-if( ${BUILD_STATIC_LIB} )
-   install(TARGETS btbb-static
-           DESTINATION lib${LIB_SUFFIX}
-           COMPONENT staticlibs
-           )
+    # Static library
+    message(STATUS "Building static library")
+    add_library(btbb-static STATIC ${c_sources})
+    set_target_properties(btbb-static PROPERTIES OUTPUT_NAME "btbb")
+    set_target_properties(btbb-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+    install(TARGETS btbb-static
+            DESTINATION lib${LIB_SUFFIX}
+            COMPONENT staticlibs)
 endif( ${BUILD_STATIC_LIB} )
 
 install(FILES ${c_headers}
