Update version string setting proceedure
Package maintainers can override the git repo detection by providing
their own release version string using cmake -DRELEASE_STRING="you_version"
For all other users we check for a git repo and default to the last release
version string if none is found

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -19,8 +19,8 @@
 # Based slightly upon the hackrf cmake setup.
 
 include(${PROJECT_SOURCE_DIR}/../cmake/set_release.cmake)
-add_definitions( -DRELEASE="${RELEASE}" )
-message(STATUS "Setting version string ${RELEASE}")
+add_definitions( -DRELEASE="${RELEASE_STRING}" )
+message(STATUS "Setting version string ${RELEASE_STRING}")
 
 # Source
 set(c_sources ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_packet.c
