--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,15 @@
 language: c
 
-cache: apt
-
-sudo: false
-
-#addons:
-#  apt:
-#    packages:
-#      - libpcap-dev 
-
-os:
-  - linux
-  - osx
-
-compiler:
-  - clang
-  - gcc
-
 matrix:
-  exclude:
-    # /usr/bin/gcc on OS X is clang, so it's not meaningful to build against both.
-    - os: osx
+  include:
+    - os: linux
       compiler: gcc
+    - os: osx
+      compiler: clang
 
-before_script:
-  - mkdir build
-  - cd build
+
+script:
+  - mkdir $TRAVIS_BUILD_DIR/build
+  - cd $TRAVIS_BUILD_DIR/build
   - CFLAGS="-g -Wall -Wextra -Werror -Wno-zero-length-array" cmake ..
-
-script: make
+  - make
